--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,21 @@
-@import 'node_modules/bulma/bulma.sass';
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
 
 main {
   min-height: 80vh;
+  padding: 1rem;
+}
+.card {
+  margin: 1rem;
+}
+
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col {
+  padding: 1rem;
 }
